debg.txt
batch.cpp:66:3: warning: missing terminating " character
   66 | """
      |   ^
batch.cpp:66:3: error: missing terminating " character
batch.cpp:73:3: warning: missing terminating " character
   73 | """
      |   ^
batch.cpp:73:3: error: missing terminating " character
batch.cpp:10:1: error: ISO C++ forbids declaration of ‘Batch’ with no type [-fpermissive]
   10 | Batch(const std::vector<Net>& netVector, int i, int n) : N(n) {
      | ^~~~~
batch.cpp: In function ‘int Batch(const std::vector<Net>&, int, int)’:
batch.cpp:10:58: error: only constructors take member initializers
   10 | Batch(const std::vector<Net>& netVector, int i, int n) : N(n) {
      |                                                          ^
batch.cpp:13:9: error: ‘nets’ was not declared in this scope
   13 |         nets.push_back(netVector[j]);
      |         ^~~~
batch.cpp:15:1: warning: no return statement in function returning non-void [-Wreturn-type]
   15 | }
      | ^
batch.cpp: At global scope:
batch.cpp:66:1: error: expected unqualified-id before string constant
   66 | """
      | ^~
batch.cpp: In member function ‘void Batch::maze_route(Grid_Graph, float, float, std::vector<float>&, std::vector<char>&, std::vector<float>&, std::vector<char>&)’:
batch.cpp:232:13: error: ‘Sdist2’ was not declared in this scope; did you mean ‘Sdist1’?
  232 |             Sdist2[G.M*j+k] = sum_cost;
      |             ^~~~~~
      |             Sdist1
batch.cpp:237:13: error: ‘Sdist2’ was not declared in this scope; did you mean ‘Sdist1’?
  237 |             Sdist2[G.M*j+k] = sum_cost;
      |             ^~~~~~
      |             Sdist1
batch.cpp:239:9: error: ‘Sdist2’ was not declared in this scope; did you mean ‘Sdist1’?
  239 |         Sdist2[G.M*j+source.y] = G.v;
      |         ^~~~~~
      |         Sdist1
batch.cpp:243:31: error: ‘v’ was not declared in this scope
  243 |             Sdist1[G.N*j+k] = v + Sdist2[G.N*k+j];
      |                               ^
batch.cpp:261:39: error: ‘v’ was not declared in this scope
  261 |                     Sdist2[G.M*j+k] = v+Sdist1[G.N*j+k];
      |                                       ^
batch.cpp:274:67: error: no matching function for call to ‘Batch::weight(int&)’
  274 |                     if (Sdist1[G.N*k+j] > Sdist1[G.N*k+j-1]+weight(G.Gx[(G.N+1)*k+j])){
      |                                                             ~~~~~~^~~~~~~~~~~~~~~~~~~
In file included from batch.cpp:1:
batch.hpp:22:18: note: candidate: ‘float Batch::weight(float, float, float)’
   22 |     inline float weight(float demand, float capacity, float c);
      |                  ^~~~~~
batch.hpp:22:18: note:   candidate expects 3 arguments, 1 provided
batch.cpp:275:67: error: no matching function for call to ‘Batch::weight(int&)’
  275 |                         Sdist1[G.N*k+j] > Sdist1[G.N*k+j-1]+weight(G.Gx[(G.N+1)*k+j]);
      |                                                             ~~~~~~^~~~~~~~~~~~~~~~~~~
In file included from batch.cpp:1:
batch.hpp:22:18: note: candidate: ‘float Batch::weight(float, float, float)’
   22 |     inline float weight(float demand, float capacity, float c);
      |                  ^~~~~~
batch.hpp:22:18: note:   candidate expects 3 arguments, 1 provided
batch.cpp:282:67: error: no matching function for call to ‘Batch::weight(int&)’
  282 |                     if (Sdist1[G.N*k+j] > Sdist1[G.N*k+j+1]+weight(G.Gx[(G.N+1)*k+j+1])){
      |                                                             ~~~~~~^~~~~~~~~~~~~~~~~~~~~
In file included from batch.cpp:1:
batch.hpp:22:18: note: candidate: ‘float Batch::weight(float, float, float)’
   22 |     inline float weight(float demand, float capacity, float c);
      |                  ^~~~~~
batch.hpp:22:18: note:   candidate expects 3 arguments, 1 provided
batch.cpp:283:67: error: no matching function for call to ‘Batch::weight(int&)’
  283 |                         Sdist1[G.N*k+j] > Sdist1[G.N*k+j+1]+weight(G.Gx[(G.N+1)*k+j+1]);
      |                                                             ~~~~~~^~~~~~~~~~~~~~~~~~~~~
In file included from batch.cpp:1:
batch.hpp:22:18: note: candidate: ‘float Batch::weight(float, float, float)’
   22 |     inline float weight(float demand, float capacity, float c);
      |                  ^~~~~~
batch.hpp:22:18: note:   candidate expects 3 arguments, 1 provided
batch.cpp:293:67: error: no matching function for call to ‘Batch::weight(int&)’
  293 |                     if (Sdist2[G.M*j+k] > Sdist2[G.M*j+k-1]+weight(G.Gy[(G.M+1)*j+k])){
      |                                                             ~~~~~~^~~~~~~~~~~~~~~~~~~
In file included from batch.cpp:1:
batch.hpp:22:18: note: candidate: ‘float Batch::weight(float, float, float)’
   22 |     inline float weight(float demand, float capacity, float c);
      |                  ^~~~~~
batch.hpp:22:18: note:   candidate expects 3 arguments, 1 provided
batch.cpp:294:67: error: no matching function for call to ‘Batch::weight(int&)’
  294 |                         Sdist2[G.M*j+k] > Sdist2[G.M*j+k-1]+weight(G.Gy[(G.M+1)*j+k]);
      |                                                             ~~~~~~^~~~~~~~~~~~~~~~~~~
In file included from batch.cpp:1:
batch.hpp:22:18: note: candidate: ‘float Batch::weight(float, float, float)’
   22 |     inline float weight(float demand, float capacity, float c);
      |                  ^~~~~~
batch.hpp:22:18: note:   candidate expects 3 arguments, 1 provided
batch.cpp:301:67: error: no matching function for call to ‘Batch::weight(int&)’
  301 |                     if (Sdist2[G.M*j+k] > Sdist2[G.M*j+k+1]+weight(G.Gy[(G.M+1)*j+k+1])){
      |                                                             ~~~~~~^~~~~~~~~~~~~~~~~~~~~
In file included from batch.cpp:1:
batch.hpp:22:18: note: candidate: ‘float Batch::weight(float, float, float)’
   22 |     inline float weight(float demand, float capacity, float c);
      |                  ^~~~~~
batch.hpp:22:18: note:   candidate expects 3 arguments, 1 provided
batch.cpp:302:67: error: no matching function for call to ‘Batch::weight(int&)’
  302 |                         Sdist2[G.M*j+k] > Sdist2[G.M*j+k+1]+weight(G.Gy[(G.M+1)*j+k+1]);
      |                                                             ~~~~~~^~~~~~~~~~~~~~~~~~~~~
In file included from batch.cpp:1:
batch.hpp:22:18: note: candidate: ‘float Batch::weight(float, float, float)’
   22 |     inline float weight(float demand, float capacity, float c);
      |                  ^~~~~~
batch.hpp:22:18: note:   candidate expects 3 arguments, 1 provided
batch.cpp:310:18: error: expected primary-expression before ‘int’
  310 |                 (int j = cornerl.x; j<cornerh.x; j++){
      |                  ^~~
batch.cpp:310:18: error: expected ‘)’ before ‘int’
  310 |                 (int j = cornerl.x; j<cornerh.x; j++){
      |                 ~^~~
      |                  )
batch.cpp:310:53: error: expected ‘;’ before ‘)’ token
  310 |                 (int j = cornerl.x; j<cornerh.x; j++){
      |                                                     ^
      |                                                     ;
batch.cpp:331:22: error: ‘Point’ {aka ‘struct Point’} has no member named ‘X’
  331 |         while ((here.X != source.X) && (here.y != source.y)){
      |                      ^
batch.cpp:331:34: error: ‘Point’ {aka ‘struct Point’} has no member named ‘X’
  331 |         while ((here.X != source.X) && (here.y != source.y)){
      |                                  ^
batch.cpp:339:31: error: ‘__gnu_cxx::__alloc_traits<std::allocator<Net>, Net>::value_type’ {aka ‘struct Net’} has no member named ‘size’
  339 |                 if (b<nets[i].size()){
      |                               ^~~~
batch.cpp: In member function ‘void Batch::rip_wire(Grid_Graph, Point, Point, std::vector<Point>&, int)’:
batch.cpp:399:35: error: expected primary-expression before ‘)’ token
  399 |     for (i=1; i<path.size()-1;i+++)
      |                                   ^
